src/css/scss/components/custom/_image-carousel.scss
.has-side-nav {
    .ntg-image-carousel {
        .flickity-carousel {
            padding-bottom: 66px;
        }
        
        .flickity-prev-next-button {
            top: calc(100% - 25px);

            @include media-breakpoint-down(md) {
                top: calc(100% - 20px);
            }

            @media (max-width: 1500px) {
                top: calc(100% - 25px);
            }

            &.previous {
                @media (min-width: 1500px) {
                    left: calc(50% - 55px);
                }
            }

            &.next {
                @media (min-width: 1500px) {
                    right: calc(50% - 55px);
                }
            }
        }
    }
}


.ntg-image-carousel {
    color: var(--current-theme-text-color, $body-color);
    overflow-x: clip;

    &:not([data-bs-theme="default"]) {
        background: var(--current-theme-color, transparent);
    }

    .flickity-carousel {
        @media (max-width: 1500px) {
            padding-bottom: 66px;
        }
    }

    .flickity-viewport {
        overflow: visible;
    }

    .carousel-cell {
        width: 100%;
        margin-right: 82px;

        @media (max-width: 1500px) {
            margin-right: 2rem;
        }

        &:not(.is-selected) {
            img {
                opacity: 0.2;
                filter: grayscale(100%);
            }
        }
    }

    .flickity-button {
        background: transparent;
        border: 2px solid var(--current-theme-text-color, $secondary);
        width: 50px;
        height: 50px;
        transition: 0.2s background ease-in-out;
    
        @include media-breakpoint-down(md) {
            width: 40px;
            height: 40px;
        }
    
        &:hover,
        &:focus {
            background: var(--current-theme-text-color, $secondary);
    
            .flickity-button-icon {
                fill: var(--current-theme-color, $white);
            }
        }
    
        &:focus {
            @include focus();
        }
    
        .flickity-button-icon {
            fill: var(--current-theme-text-color, $secondary);
            width: 35%;
            height: 35%;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
            transition: 0.2s fill ease-in-out;
        }
    }

    .flickity-prev-next-button {
        @include media-breakpoint-down(md) {
            top: calc(100% - 20px);
        }

        @media (max-width: 1500px) {
            top: calc(100% - 25px);
        }

        &.previous {
            left: calc(50% - 55px);

            @include media-breakpoint-down(md) {
                left: calc(50% - 45px);
            }

            @media (min-width: 1500px) {
                left: -66px;
            }
        }

        &.next {
            right: calc(50% - 55px);

            @include media-breakpoint-down(md) {
                right: calc(50% - 45px);
            }

            @media (min-width: 1500px) {
                right: -66px;
            }
        }
    }

    figure {
        margin-bottom: 0;
    }

    figcaption {
        margin-top: 0.5rem;
    }

    img {
        transition: 0.2s opacity, 0.2s filter;
    }
}

